tests/Core/negative/parsing/test017.jvc
type Unit {
  unit : Unit;
};

case unit of {
}
